# ahk

./: .gitignore  README.md  book.kra  hatch_build.py  package.py  pyproject.toml  req_main.txt  tool.kra
ahk/: Makefile  __main__.py  _pyinstaller.py  autostart.py  logs.py  main.py  paths.py  regenerate.py  toggle_icons.c  toggle_icons.py  toggle_icons_c.py
ahk/hooks/: hook-ahk.py
ahk_cursor/: main.py  move-cursor.py  stop.py
ahk_script_templates/: BGI.template.ahk  WindowsTerminal.template.ahk  book.template.ahk
ahk_toggle_icons/: CMakeLists.txt  README.md
resources/: edit.ps1  toggle-icons.deps.json
script_templates/: BGI.ahk  BGI.template.ahk  WindowsTerminal.ahk  WindowsTerminal.template.ahk
scripts/: BGI.ahk  WindowsTerminal.ahk
