[project]
name = "soda-ahk"
version = "2025.1.14.0"
description = "my ahk scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ziglang>=0.13.0.post1",
]

[project.urls]
Repository = "https://github.com/soda92/ahk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["ahk", "ahk_resources", "ahk_script_templates"]
include = ["*.ahk", "*.ps1", "*.ico", "*.exe", "*.txt"]

[tool.hatch.build.targets.wheel]
include = ["*.ahk", "*.ps1", "*.ico", "*.exe", "*.txt"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "em-keyboard>=4.5.0",
    "twine>=6.0.1",
]

[project.scripts]
soda-ahk = "ahk.main:main"
