[project]
name = "soda-ahk"
version = "2025.4.26.0"
description = "soda's ahk scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hatchling>=1.27.0",
    "pyinstaller>=6.15.0",
]

[project.urls]
Repository = "https://github.com/soda92/ahk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["ahk", "ahk_resources", "ahk_script_templates"]
include = ["*.ahk", "*.ps1", "*.ico", "*.txt", "procexp.exe", "regjump.exe"]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["ahk", "ahk_resources", "ahk_script_templates"]
# exclude is not needed because wheel is build from sdist in uv

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "em-keyboard>=4.5.0",
    "twine>=6.0.1",
]

[project.scripts]
soda-ahk = "ahk.main:main"
